crates/ty_python_semantic/resources/mdtest/snapshots/semantic_syntax_erro…_-_Semantic_syntax_erro…_-_name_is_parameter_an…_(99bae53daf67ae6e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: semantic_syntax_errors.md - Semantic syntax error diagnostics - name is parameter and global
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/semantic_syntax_errors.md
---

# Python source files

## mdtest_snippet.py

```
1 | def f(a):
2 |     global a  # error: [invalid-syntax]
```

# Diagnostics

```
error[invalid-syntax]: name `a` is parameter and global
 --> src/mdtest_snippet.py:2:12
  |
1 | def f(a):
2 |     global a  # error: [invalid-syntax]
  |            ^
  |

```

```
error[invalid-syntax]: name `a` is used prior to global declaration
 --> src/mdtest_snippet.py:2:12
  |
1 | def f(a):
2 |     global a  # error: [invalid-syntax]
  |            ^
  |

```

```
warning[unresolved-global]: Invalid global declaration of `a`
 --> src/mdtest_snippet.py:2:12
  |
1 | def f(a):
2 |     global a  # error: [invalid-syntax]
  |            ^ `a` has no declarations or bindings in the global scope
  |
info: This limits ty's ability to make accurate inferences about the boundness and types of global-scope symbols
info: Consider adding a declaration to the global scope, e.g. `a: int`
info: rule `unresolved-global` is enabled by default

```
